# valdi-cli

./: .gitignore  LICENSE  Makefile  README.md  main.py  pylint.rc  pyproject.toml  requirements-dev.txt  requirements.txt  valdi-subparsers.py  valdi.py
.github/: pypi.yaml
.github/workflows/: pypi.yaml
cli/: authenticator.py  initializer.py  volume_manager.py
config/: settings.py
router/: service_router.py
valdi/: entrypoint.py
valdi/cli/: __init__.py  authenticator.py  initializer.py  volume_manager.py
valdi/config/: settings.py
valdi/router/: service_router.py
